# invoke-lint

./: .bumpversion.cfg  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Pipfile  README.md  compose.yml  docker-compose.yml  legacy.dockerfile  project-words.txt  pyproject.toml  setup.py  tasks.py
.devcontainer/: compose.yml  devcontainer.json  docker-compose.yml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: analyze.yml  codeql-analysis.yml  codeql.yml  deploy.yml  qlty.yml  reusable-codeql-analysis.yml  reusable-deploy.yml  reusable-lint.yml  reusable-qlty.yml  reusable-test.yml  test.yml
docs/: CONTRIBUTING.md
invokelint/: __init__.py  _clean.py  dist.py  lint.py  path.py  ruff.py  run.py  style.py  test.py
invokelint/path/: __init__.py  filter_duplication.py  setuptools.py
tests/: __init__.py  conftest.py  test__clean.py  test_dist.py  test_lint.py  test_run.py  test_style.py  test_test.py
tests/path/: __init__.py  test___init__.py  test_filter_duplication.py  test_setuptools.py
tests/testlibraries/: __init__.py
